# git_Wrapper

./: .editorconfig  .gitignore  Build.bat  CLAUDE.md  CMakeLists.txt  README.md  USAGE.md  build_msvc.ps1  main.cc  manifest.json
docs/: ROADMAP.md  USAGE.md
scripts/: build.sh  build_msvc.ps1  smoke_test.ps1  smoke_test.sh
src/: commands.cc  commands.h  config.h  main.cc  process.h  repo.cc  repo.h  sanitize.cc  sanitize.h  util.cc  util.h  version.h.in
src/platform/linux/: process_posix.cc
src/platform/windows/: process_win.cc
